--- a/backend/src/templates/ba.html
+++ b/backend/src/templates/ba.html
@@ -120,7 +120,7 @@
                 Độc lập – Tự do – Hạnh phúc
             </div>
             <div class="logo">
-                <img src="logo.png" alt="Logo Electric Power University">
+                <img src="<%= logoBase64 %>" alt="Logo Electric Power University">
             </div>
             <div class="title">
                 HIỆU TRƯỞNG<br>
@@ -129,14 +129,14 @@
             </div>
 
             <div class="field center">cho</div>
-            <div class="field">Họ và tên:</div>
-            <div class="field">Ngày sinh:</div>
-            <div class="field">Năm tốt nghiệp:</div>
-            <div class="field">Xếp loại tốt nghiệp:</div>
-            <div class="field">Hình thức đào tạo:</div>
+            <div class="field">Họ và tên: <%= fullname %></div>
+            <div class="field">Ngày sinh: <%= dob %></div>
+            <div class="field">Năm tốt nghiệp: <%= gradYear %></div>
+            <div class="field">Xếp loại tốt nghiệp: <b><%= classification %></b></div>
+            <div class="field">Hình thức đào tạo: chính quy</div>
 
             <div class="bottom-left">
-                Số hiệu:<br>
+                Số hiệu: <%= number %><br>
                 Số vào sổ cấp bằng:
             </div>
             <div class="bottom-right">
@@ -151,7 +151,7 @@
                 Independence – Freedom – Happiness
             </div>
             <div class="logo">
-                <img src="logo.png" alt="Logo Electric Power University">
+                <img src="<%= logoBase64 %>" alt="Logo Electric Power University">
             </div>
             <div class="title">
                 THE RECTOR<br>
@@ -160,14 +160,14 @@
             </div>
 
             <div class="field center">upon</div>
-            <div class="field">Full name:</div>
-            <div class="field">Date of birth:</div>
-            <div class="field">Year of graduation:</div>
-            <div class="field">Degree classification:</div>
-            <div class="field">Mode of study:</div>
+            <div class="field">Full name: <%= fullname %></div>
+            <div class="field">Date of birth: <%= dob %></div>
+            <div class="field">Year of graduation: <%= gradYear %></div>
+            <div class="field">Degree classification: <b><%= classificationEn %></b></div>
+            <div class="field">Mode of study: full-time</div>
 
             <div class="bottom-left">
-                Serial number:<br>
+                Serial number: <%= number %><br>
                 Reference number:
             </div>
             <div class="bottom-right">
